--- a/src/components/Activity/Activity.less
+++ b/src/components/Activity/Activity.less
@@ -5,7 +5,12 @@
     --orangeColor: #ffaa35;
     --greenColor: #61bd17;
     --blueColor: #3c8aff;
+    --violetColor: #733cff;
+    --pinkColor: #c937ea;
 }
 
 @import "Simple";
 @import "Atom";
+@import "Bars";
+@import "Cycle";
+@import "Ring";
